<resources>
    <string name="app_name">WeatherGuide</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="weather_guide">Weather Guide</string>
    <attr name="colorNavigationItem" format="color" />
    <attr name="colorNavigationItemSelected" format="color" />

    <attr name="drawableNavigationItemBackground" format="reference" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="temperature">Temperature</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloud</string>
    <string name="city">City</string>
    <string name="visibility">Visibility</string>
    <string name="weather_description">Weather Description</string>
    <string name="hourly_weather">Hourly Weather</string>
    <string name="daily_weather">Daily Weather</string>
    <string name="current_location">Current Location</string>
    <string name="currentDate">Date</string>
    <string name="ultraviolet">Ultra Violet</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="meter_Sec">M/S</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="mile_Hour">M/H</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="do_you_want_to_save_this_location">Do you want to save this location?</string>
    <string name="save">Save</string>
    <string name="choose_another">Choose Another</string>
    <string name="save_location">Save Location</string>
    <string name="search">Search</string>
    <string name="add_location_to_favorites">Add location to favorites</string>
    <string name="do_you_want_to_add_this_location">Do you want to add this location?</string>
    <string name="add">Add</string>




    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="selected_datetime">The date and time you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="original_button">Framework Picker</string>
    <string name="pick_datetime">Pick Date+Time</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate">Vibrate on touch</string>
    <string name="dismiss">Dismiss on pause (eg: orientation change)</string>
    <string name="title">Show a title</string>
    <string name="show_version_2">Use marshmallow layout</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="enable_minutes">Show minutes picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="disable_dates">Disable specific dates</string>
    <string name="disable_times">Disable specific times</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <string name="switch_orientation">Switch scroll orientation</string>
    <string name="default_selection">Use alternative default selection</string>
    <string name="action_settings">Settings</string>

    <string name="tab_title_time">Time</string>
    <string name="tab_title_date">Date</string>
    <string name="tab_title_datetime">Date+Time</string>
    <string name="dismiss_alarm">Dismiss</string>
    <string name="weather_is_fine">Weather is fine</string>
    <string name="weather_guide_alarm">Weather Guide Alarm</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="daily_forecast">DAILY FORECAST</string>
    <string name="confirm_remove_message">Are you sure you want to delete this location?</string>
    <string name="confirm_delete_message">Are you sure you want to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="location_removed_successfully">Location removed successfully</string>
    <string name="allow_location_permissions">You need to allow location permissions for the app to get weather data.</string>
    <string name="allow">Allow</string>
    <string name="appear_on_top_permission">You need to allow appear on top permission to display over other apps</string>
    <string name="no_network_connection">No network connection</string>
</resources>