<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_black"
        android:text="@string/add_location_to_favorites"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_black"
        android:text="@string/do_you_want_to_add_this_location"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:fontFamily="@font/muli_black"
            android:textColor="@color/white"
            android:background="@drawable/background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:layout_marginEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChooseAnother"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:textColor="@color/white"
            android:background="@drawable/background"
            android:layout_weight="1"
            android:text="@string/choose_another"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</LinearLayout>